<resources>
    <string name="app_name">天眼</string>
    <string name="app_name_en">Eye In The Sky</string>
    <string name="description">每日精选视频推荐,让你大开眼界</string>
    <string name="description_en">Daily move,Daily up</string>
    <string name="today_tips">今日精选>></string>
    <string name="team">大川出品</string>
    <string name="favorties">我的收藏</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="like">喜欢</string>
    <string name="so_so">还行</string>
    <string name="dislike">不喜欢</string>
    <string name="bottom_1">每日精选</string>
    <string name="bottom_2">往期分类</string>
    <string name="net_error">网络错误</string>
    <string name="click_to_retry">点击屏幕冲死</string>

    <string name="my_huancun">我的缓存</string>


    <string name="my_colect">我的收藏</string>
    <string name="no_favorties">你收藏的视频可以在这里找到</string>

    <string name="setting">设置</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="use_liuliang">- 使用流量时提醒我 -</string>
    <string name="update_tips">- 日报更新提醒 -</string>
    <string name="clear_cache">清除本地缓存</string>
    <string name="update">检查版本更新</string>
    <string name="tiaokuan">用户协议</string>
    <string name="movie_tips">视频功能说明</string>
    <string name="jubao">版权举报</string>

    <string name="feedback">意见反馈</string>
    <string name="like_our_recommend">- 是否喜欢我们推荐的内容 -</string>
    <string name="like_our_design">- 是否喜欢我们这个App的设计 -</string>
    <string name="tell_us">请告诉我们你遇到的问题或想反馈的意见</string>
    <string name="e_mail">邮箱</string>

    <string name="mycache">我的缓存</string>
    <string name="manual_caching">手动缓存</string>
    <string name="daily_auto_caching">日报自动缓存</string>
    <string name="edit">编辑</string>
</resources>
