<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <dachuan.com.tianyan.view.widget.ZoomDraweeView
        android:id="@+id/start_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fresco:placeholderImage="@mipmap/img_start"
        fresco:placeholderImageScaleType="centerCrop"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bg"
        android:visibility="invisible"
        android:background="@color/white"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_eye_white"
        android:id="@+id/eye"
        android:layout_centerInParent="true"
         />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name_en"
        android:layout_below="@id/eye"
        android:text="@string/app_name_en"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        fontPath="fonts/Roboto-ThinItalic.ttf"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_name"
        android:layout_below="@id/app_name_en"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        fontPath="fonts/Roboto-Bold.ttf"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_alignParentBottom="true"
        android:text="@string/description"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="50dp"
        fontPath="fonts/Roboto-Bold.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description_en"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/description"
        android:text="@string/description_en"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        fontPath="fonts/Roboto-ThinItalic.ttf"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/today"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/text_color_dark_secondary"
        android:layout_marginBottom="50dp"
        android:text="@string/today_tips"
        android:visibility="invisible"
        fontPath="fonts/Roboto-Bold.ttf"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_marginBottom="15dp"
        android:layout_above="@id/description"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:visibility="invisible"
        android:textColor="@color/text_color_dark_secondary"
        fontPath="fonts/Roboto-ThinItalic.ttf"/>
</RelativeLayout>